<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Finance</string>
    <string name="action_settings">Settings</string>
    <string name="incomeText">Income</string>
    <string name="expenseText">Expense</string>
    <string name="reportText">Report</string>
    <string name="incomeHeading">Income</string>
    <string name="addIncome_btn_text">Add</string>
    <string name="expenseHeading">Expense</string>
    <string name="addExpense_btn_text">Add</string>
    <string name="addIncomeView">Add Income</string>
    <string name="category_name">Category</string>
    <string name="category_amount">Amount</string>
    <string name="category_date">Date</string>
    <string name="category_budget">Budget Amount</string>
     <string name="addExpenseView">Add Expense</string>
     <string name="categoryTextName">Category</string>
     <string name="amountTextName">Amount</string>
     <string name="budgetTextName">Budget</string>
     <string name="backButton">Back</string>
     <string name="categoryCancelButton">Cancel</string>
     <string name="incomeExpenseButton">Expense</string>
     <string name="incomeReportButton">Report</string>
     <string name="expenseIncomeButton">Income</string>
     <string name="expenseReportButton">Report</string>
     <string name="reportHeadingText">Monthly Report</string>
     <string name="highIncomeTextView">Highest Income Category</string>
     <string name="highExpenseTextView">Highest Expense Category</string>
     <string name="reportTotIncomeLable">Total Income</string>
     <string name="reportTotExpenseLable">Total Expense</string>
     <string name="reportToIncomeText">Income</string>
     <string name="reportToExpenseText">Expense</string>
     
     
    

</resources>
