<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addExpenseLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="4"
    android:orientation="vertical"
    android:rowCount="15" >

    <TextView
        android:id="@+id/addExpenseTextView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_column="0"
        android:layout_columnSpan="2"
        android:layout_gravity="top"
        android:layout_row="0"
        android:gravity="center"
        android:text="@string/addExpenseView"
        android:textColor="@android:color/holo_green_dark" />

    <TextView
        android:id="@+id/addExpenseErrorTextView"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_gravity="top"
        android:gravity="center"
        android:textColor="@android:color/holo_red_dark" />

    <TextView
        android:id="@+id/expenseCategoryNameTextView"
        android:layout_gravity="left"
        android:text="@string/category_name" />

    <Spinner
        android:id="@+id/expenseCategorySpinner"
        android:layout_height="42dp"
        android:layout_gravity="center_vertical" />

    <TextView
        android:id="@+id/expenseAmountTextView"
        android:layout_gravity="left"
        android:text="@string/category_amount" />

    <EditText
        android:id="@+id/addExpenseAmountEditText"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:inputType="numberDecimal" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/expenseDateTextView"
        android:layout_gravity="left"
        android:text="@string/category_date" />

    <EditText
        android:id="@+id/addExpenseDateEditText"
        android:layout_gravity="fill_horizontal"
        android:clickable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="yyyy-MM-dd"
        android:inputType="date"
        android:longClickable="false" />

    <TextView
        android:id="@+id/addExpenseBudgetTextView"
        android:layout_gravity="left"
        android:text="@string/category_budget" />

    <EditText
        android:id="@+id/addExpenseBudgetEditText"
        android:layout_gravity="fill_horizontal"
        android:ems="10"
        android:inputType="numberDecimal" />
    
    <Button
        android:id="@+id/addExpenseDetailsAddButton"
        android:layout_width="90dp"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="10"
        android:text="@string/addIncome_btn_text" />

    <Button
        android:id="@+id/expenseCancelButton"
        android:layout_width="90dp"
        android:layout_column="0"
        android:layout_gravity="right|top"
        android:layout_row="10"
        android:text="@string/categoryCancelButton" />

</GridLayout>
