<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sree.finance.MainActivity" >

    <Button
        android:id="@+id/incomeButton"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="30dp"
        android:text="@string/incomeText" />

    <Button
        android:id="@+id/expenseButton"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/expenseText" />

    <Button
        android:id="@+id/reportsButton"
        android:layout_width="281dp"
        android:layout_height="wrap_content"
        android:text="@string/reportText" />

</LinearLayout>
