<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/expenseMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="3"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/expenseHeadingTextView"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:gravity="center_horizontal"
        android:text="@string/expenseHeading"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_green_dark" />

    <TextView
        android:id="@+id/expenseErrorTextView"
        android:layout_column="0"
        android:layout_columnSpan="3"
        android:layout_gravity="fill_horizontal"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/holo_red_dark" />
    
     <TextView
         android:id="@+id/expenseCatNameView"
         android:layout_width="110dp"
         android:layout_height="44dp"
         android:layout_gravity="left"
         android:text="@string/categoryTextName"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textColor="@android:color/holo_blue_dark" />
    
    <TextView
        android:id="@+id/expenseCatAmountView"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:text="@string/amountTextName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark" />
    
    <TextView
        android:id="@+id/expenseCatBudgetView"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:text="@string/budgetTextName"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark" />

    <TextView
        android:id="@+id/expenseCatView1"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseAmtView1"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseBudView1"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseCatView2"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseAmtView2"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseBudView2"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseCatView3"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseAmtView3"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseBudView3"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseCatView4"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseAmtView4"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseBudView4"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseCatView5"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseAmtView5"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/expenseBudView5"
        android:layout_width="110dp"
        android:layout_height="44dp"
        android:layout_gravity="left"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
   <!--   <Button
        android:id="@+id/expenseBackButton"
        android:layout_width="105dp"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="7"
        android:text="@string/backButton" /> -->
        
         <Button
        android:id="@+id/expenseToReport"
        android:layout_column="2"
        android:layout_gravity="left|center_vertical"
        android:layout_row="8"
        android:text="@string/expenseReportButton" />

    <Button
        android:id="@+id/expenseToIncome"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="8"
        android:text="@string/expenseIncomeButton" />

    <Button
        android:id="@+id/addexpenseDetailButton"
        android:layout_width="86dp"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="8"
        android:text="@string/addExpense_btn_text" />

    <ImageButton
        android:id="@+id/quitExpenseButton"
        android:layout_width="31dp"
        android:layout_height="27dp"
        android:layout_column="2"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:src="@android:drawable/ic_input_delete" />

</GridLayout>